# emilia-print-mirror

./: .gitignore  LICENSE  README.md  build_mirror.spec  build_service.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: INSTALL_GUIDE.md
src/: __init__.py  mirror_app.py  mirror_service.py
