[project]
name = "spooler-queue-copy"
version = "2.0.0"
description = "Windows application to automatically mirror print jobs between printers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pywin32>=306",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
